# CVid

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  ConsoleWindowApp.cpp
demos/demo1/: CMakeLists.txt  main.cpp
demos/demo2/: CMakeLists.txt  main.cpp
doc/: 3D Graphics in CMD.docx  3D Graphics in CMD.pptx  Rasterization and Rendering in a Console.docx  Seminaarityö.docx  Thesis.docx  Thesis.md  src.txt  tmp.txt  todo.txt
engine/: CMakeLists.txt
ext/: quaternion.h  quaternion_utils.h
include/cvid/: Camera.h  Helpers.h  Math.h  Matrix.h  Model.h  Rasterizer.h  Renderer.h  Texture.h  Triangle.h  Types.h  Vector.h  Window.h
include/cvid/math/: Vector.h
resources/: Achelous.mtl  Alpheus.mtl  BadApple.cvid  CargoCannon.mtl  Cube.blend  Cube.blend1  Cube.mtl  LaserDeathBeam.mtl  Numicus.mtl  Suzanne.mtl
sandbox/: CMakeLists.txt  main.cpp
sandboxes/: CMakeLists.txt
sandboxes/sandbox1/: CMakeLists.txt  main.cpp
sandboxes/sandbox2/: CMakeLists.txt  main.cpp
sandboxes/sandbox3/: CMakeLists.txt  main.cpp
sandboxes/sandbox4/: CMakeLists.txt  main.cpp
src/: CVid.cpp  Camera.cpp  Math.cpp  Matrix.cpp  Model.cpp  Rasterizer.cpp  Renderer.cpp  Texture.cpp  Triangle.cpp  Vector.cpp  Window.cpp
